<resources>
    <string name="app_name">Gologo</string>
    <string name="gender">Select Gender</string>
    <string-array name="App_instance">
        <item>10</item>
        <item>60</item>
    </string-array>
    <string name="app_inst">Choose App Instance</string>
    <string name="clickappinst">Click for Surveys</string>
    <string name="aitoast">App Instance can't be empty.</string>
    <string-array name="district">
        <item>Bokaro</item>
        <item>East Singhbhum</item>
        <item>Ranchi</item>
        <item>Giridih</item>
        <item>Ramgarh</item>
        <item>Palamu</item>
        <item>Dhanbad</item>
        <item>Chirkunda</item>
        <item>Deogarh</item>
        <item>Hazaribagh</item>
        <item>Jamshedpur</item>
        <item> Other</item>
    </string-array>
    <string name="state">Select State</string>
    <string name="city">Select City</string>
    <string-array name="campnames">
        <item>Health Camps</item>
        <item>Agriculture</item>
        <item>Government Campaign</item>
        <item>Polio Camps</item>
        <item>Vaccination Camps</item>
        <item>Education Camps</item>
        <item>Political Campaign</item>
        <item>Awareness Camp</item>
        <item>Social campaign</item>
    </string-array>
    <string name="gramvaani"> Gramvaani Website</string>
    <string name="open_windows_explorer">View Recordings</string>
    <string name="app_info">App Info</string>
    <string name="app_share">App Share</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="appinfo"> \'Gologo\' is used to broadcast the news in the community. A registered volunteer
         performs one time login for the authentication. He can broadcast any recorded announcements, can launch ongoing surveys
        and can circulate information through text messages. The volunteer can address the information either to all or to the relevant audience
        by managing contacts groups. He can create new user contact of the community into the GramVaani Database.
        The working of use cases is explained below :</string>
    <string name="audioinfo">Tapping on this icon starts the recording where the admin can record an annoucement and broadcast it.</string>
    <string name="messageinfo">Tapping on this icon will open message templates where the admin can select a template, fill in parameters and can broadcast to the specified users.</string>
    <string name="creategroupinfo">Tapping on this icon will ask for the new group name to create in Gram Vaani groups.</string>
    <string name="createcontactinfo">Tapping on this icon will ask for all the details of the user to be added on the server.</string>
    <string name="surveyinfo">Tapping on this icon will display a list of recent surveys where the admin can select, view and launch a survey to a specified set of users. </string>
    <string name="gramvaaniinfo">Copyright \u00a9 2016 Gologo. All rights reserved.</string>
    <string-array name="beneficiaries">
        <item>Women</item>
        <item>Children</item>
        <item>Landlords</item>
        <item>Tenants</item>
        <item>Farmers</item>
        <item>Local Shopkeepers</item>
        <item>School Teachers</item>
        <item>All</item>
    </string-array>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="phoneno">Phone Number</string>
    <string name="pinno">PIN Number</string>
    <string name="pinauthenticate">PIN Authentication</string>
    <string name="LOGIN">LOGIN</string>
    <string name="forget_your_pin_number">Forget your PIN No?</string>
    <string name="Phone_Number_cant_be_empty">Phone Number can\'t be empty</string>
    <string name="Enter_valid_phone_number">Enter valid phone number</string>
    <string name="PIN_Number_cant_be_empty">PIN Number can\'t be empty</string>
    <string name="Enter_valid_PIN_Number"> Enter valid PIN Number</string>
    <string name="Validating_credentials">Validating Credentials</string>
    <string name="Pleasewait">Please Wait #8230</string>
    <string name="Google_Play_Services_not_available">Google Play Services not available</string>
    <string name="check_your_network">Check your internet connection</string>
    <string name="check_your_server">Server Error</string>
    <string name="check_your_details_phone">No admin registered with the given phone number</string>
    <string name="check_your_details_pin">Invalid Credentials. Pin did not match! Forgot Pin?</string>
    <string name="Successfully_logged_in">Successfully logged in</string>
    <string name="PIN_recovery">PIN Recovery</string>
    <string name="Enter_the_registered_Phone">Enter the registered Phone</string>
    <string name="Receive_new_pin">RECEIVE NEW PIN</string>
    <string name="You_will_receive_pin_shortly">You will receive pin shortly via SMS on given phone number</string>
    <string name="no_user_registered">No user registered with the given phone number</string>
    <string name="Add_a_contact">Add contact</string>
    <string name="Create_New_Contact_Group">Create Contact Group</string>
    <string name="Record_Audio">Broadcast Audio</string>
    <string name="Send_Message">Send Message</string>
    <string name="Pick_Survey">Launch Survey</string>
    <string name="error_in_fetching_groups">Error in fetching contact groups, Please Try Again</string>
    <string name="enter_group_name">Enter contact group name</string>
    <string name="create_group">Create Group</string>
    <string name="Please_enter_groupname_before_creating">Please enter groupname before creating</string>
    <string name="Error_in_creating_Contact_Group">Error in creating Contact Group, Please Try Again</string>
    <string name="Contact_Group_Created">Contact Group Created</string>
    <string name="groupname">Group</string>
    <string name="announcement_of_surveys">Announcement of Surveys</string>
    <string name="announcement_of_camps">Announcement of Camps</string>
    <string name="announcement_of_govtschemes">Announcement of Govt. Schemes</string>
    <string name="selectdate">Select Survey Date</string>
    <string name="Please_enter_valid_date_before_sending">Please enter valid date (YYYY-MM-DD) before sending</string>
    <string name="date_less_current">Date entered is less than current date.</string>
    <string name="surveydate">Survey Date</string>
    <string name="campname">Enter the Camp Name </string>
    <string name="campstartdate">Enter the Start Date </string>
    <string name="campenddate">Enter the End Date </string>
    <string name="campvenue">Enter Camp Venue</string>
    <string name="campnametoast">Camp Name can\'t be empty.</string>
    <string name="startdatetoast">Start date can\'t be empty.</string>
    <string name="enddatetoast"> End date can\'t be empty.</string>
    <string name="venuenametoast">Venue name can\'t be empty.</string>
    <string name="campname1">Camp Name</string>
    <string name="startdate"> Start Date</string>
    <string name="enddate">End Date</string>
    <string name="venue">Venue</string>
    <string name="addressofcamp">Block-2, Munirka, Delhi</string>
    <string name="govtschemename"> Enter the Scheme Name  </string>
    <string name="govtschemestartdate"> Select Start Date </string>
    <string name="govtschemebeneficiary"> Select Beneficiaries </string>
    <string name="govtschemenametoast"> Scheme Name can\'t be empty. </string>
    <string name="govtschemestartdatetoast"> Start Date can\'t be empty.</string>
    <string name="govtschemebeneficiarytoast"> Beneficiary can\'t be empty </string>
    <string name="schemename">Scheme </string>
    <string name="beneficiary">Beneficiaries </string>
    <string name="startscheme">Start Date</string>
    <string name="National_Employment_Act">National Employment Act</string>
    <string name="Phonecontacts">Phone Contacts</string>
    <string name="GVGroups">Gramvaani Groups</string>
    <string name="MVCallers">Mobile Vaani Callers</string>
    <string name="pick_contacts">Pick Contacts</string>
    <string name="Select_format">Select Audio Format</string>
    <string name="audio_format">Format</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="Start_Recording">Press to Start</string>
    <string name="Stop_Recording">Press to Stop</string>
    <string name="StartRecording">Start Recording</string>
    <string name="StopRecording">Stop Recording</string>
    <string name="Error_in_Loading_Recorder">Error in Loading Recorder</string>
    <string name="audio_recorded">Audio Recorded</string>
    <string name="name">Name </string>
    <string name="DOB">DOB</string>
    <string name="number">Phone</string>
    <string name="gender1">Gender</string>
    <string name="contactgroup">Contact Groups</string>
    <string name="location">Location</string>
    <string name="contactname">Enter the contact name</string>
    <string name="enterphone">Enter the phone number</string>
    <string name="enterage">Enter Date of Birth</string>
    <string name="enterdistrict">Enter District</string>
    <string name="enterstate">Enter State</string>
    <string name="createcontact">Create</string>
    <string name="cancelcontact">Cancel</string>
    <string name="entergroups">Select Group Names</string>
    <string name="Select_Contact_Groups">Select Contact Groups</string>
    <string name="Press_Confirm">Press Confirm to send, Press edit to change</string>
    <string name="Add_Contact_Details">Add Contact Details"</string>
    <string name="Name_cant_be_empty">Name can\'t be empty</string>
    <string name="Name_must_have_atleast_4_characters">Name must have atleast 4 characters</string>
    <string name="Enter_valid_phone_number1">Enter valid phone number</string>
    <string name="enter_valid_dob">Date of Birth can\'t be empty</string>
    <string name="Enter_valid_age">Enter valid age(0-150)</string>
    <string name="Contact_created_successfully"> New Contact added successfully</string>
    <string name="select_valid_location">Select location for the new contact</string>
    <string name="Select_atleast_one_contact">Select atleast one contact</string>
    <string name="recording_submitted">Announcement is submitted for dial outs</string>
    <string name="recording_error">Server Uploading error</string>
    <string name="enter_phonecontact_name">Enter contact name</string>
    <string name="send">Send</string>
    <string name="Select_atleast_one_group">Select atleast one group</string>
    <string name="mvcallers_not_present">No caller found in the given time duration</string>
    <string name="end_date_less_then_current_date">End Date is less than start date.</string>
    <string name="name_text">Name :</string>
    <string name="user_type_value">Admin</string>
    <string name="number_text">Number :</string>
    <string name="age_text">Date of Birth :</string>
    <string name="location_text">District :</string>
    <string name="Gender_text">Gender :</string>
    <string name="User_type_text">User Type :</string>
    <string name="mainmenu">Go to Menu</string>
    <string name="state_text">State :</string>
    <string name="loading">Loading...</string>
    <string name="details_displayed">All Details displayed successfully</string>
    <string name="error_network_timeout">Server Time Out Error </string>
    <string name="auth_failure">Authentication Failure Error</string>
    <string name="noconnection">No Connection Error</string>
    <string name="server_error">Server Error</string>
    <string name="network_error">Network Error</string>
    <string name="parse_error">Parse Error</string>
    <string name="surveyresponses">View Survey Responses</string>
    <string name="no_response">No responses are recorded</string>
</resources>