<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:id="@+id/scroll">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/appinfo"
            android:id="@+id/txview"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:typeface="serif"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#E0F7FA"
            android:onClick="audio"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/audio"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/audioinfo"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#E0F7FA"
            android:onClick="message"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/mess"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/messageinfo"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#E0F7FA"
            android:onClick="survey"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/survey"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/surveyinfo"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#E0F7FA"
            android:onClick="contact"
            android:layout_marginBottom="15dp"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/contact"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/createcontactinfo"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:gravity="center"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#E0F7FA"
            android:onClick="group"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/group"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/creategroupinfo"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:gravity="center"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gramvaaniinfo"
            android:textSize="30sp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:typeface="serif"
            />
    </LinearLayout>
</ScrollView>


