<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="40dp"
    android:weightSum="1">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="70dp"
        android:hint="@string/groupname"
        android:paddingTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="#E0F7FA"
        android:textColorHint="#3F51B5"
        android:textAlignment="center" />

    <EditText
        android:layout_width="0dp"
        android:layout_weight="0.60"
        android:layout_height="70dp"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:hint="@string/enter_group_name"
        android:id="@+id/group_editText"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="#E0F7FA"
        android:textColorHint="#3F51B5"
        android:textAlignment="center" />


    <ImageButton
        android:id="@+id/btnSpeak1"
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_height="70dp"
        android:src="@drawable/mic"
        android:scaleType="fitXY"
        android:layout_gravity="center"/>
</LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:id="@+id/creategroup_button"
        android:ems="10"
        android:layout_marginTop="70dp"
        android:textColor="#ffffff"
        android:background="#e68652"/>

</LinearLayout>